<resources>
    <string name="app_name">울집 어디?</string>
    <string name="action_settings">설정</string>

    <!-- Strings used for fragments for navigation -->
    <string name="item_fragment_label">집 목록</string>
    <string name="item_details_fragment_label">상세정보</string>
    <string name="add">추가</string>
    <string name="cancel">취소</string>
    <string name="done">완료</string>
    <string name="close">닫기</string>
    <string name="dummy_image">NO IMAGE</string>
    <string name="ok">확인</string>
    <string name="add_picture">사진 추가</string>
    <string name="name">이름</string>
    <string name="address">주소</string>
    <string name="see_map">지도 보기</string>
    <string name="deposit">보증금(만원)</string>
    <string name="rental">월세(만원)</string>
    <string name="expense">관리비(만원)</string>
    <string name="start_date">계약가능일(시작)</string>
    <string name="end_date">계약가능일(종료)</string>
    <string name="category">분류</string>
    <string name="number">No</string>
    <string name="eval_content">평가내용</string>
    <string name="eval_result">평가결과</string>
    <string name="remark">비고</string>
    <string name="picture">사진</string>
    <string name="modify">수정</string>
    <string name="ellipsis">…</string>
    <string name="cr">\n</string>
    <string name="fullscreen">전체화면</string>
    <string name="map">지도</string>
    <string name="go_to_list">목록으로</string>
    <string name="thumbnail">썸네일</string>
    <string name="setting_manage_eval_form_group">평가 템플릿 관리</string>
    <string name="eval_method">평가방식</string>
    <string name="eval_weight">평가 가중치</string>
    <string name="description">설명</string>
    <string name="eval_form_list">평가항목</string>
    <string name="eval_form_group_name">템플릿명</string>
    <string name="deal_type">전/월세</string>
    <string name="floor">층수</string>
    <string name="realtor_tel_no">중개인 전화번호</string>
    <string name="owner_tel_no">집주인 전화번호</string>
    <string name="area">넓이</string>
</resources>