<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.InputType" />

        <import type="android.view.View" />

        <variable
            name="isEditing"
            type="Boolean" />

        <variable
            name="remark"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_wide">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_remark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_mid"
            app:counterEnabled="true"
            app:counterMaxLength="255"
            app:errorEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="255"
                android:enabled="@{isEditing}"
                android:hint="@string/remark"
                android:inputType="@{isEditing ? InputType.TYPE_CLASS_TEXT : InputType.TYPE_NULL}"
                android:maxLength="255"
                android:text="@{remark}" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:id="@+id/btn_dialog_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/primary_dark"
                android:visibility="@{isEditing ? View.VISIBLE : View.GONE}" />

            <Button
                android:id="@+id/btn_dialog_ok"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="@color/primary_dark" />
        </LinearLayout>

    </LinearLayout>
</layout>